--- a/assign1/public/index.html
+++ b/assign1/public/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Assignment 1</title>
-
-    <!-- This line provides automatic page and style reloading when files change -->
     <script type="module" src="/lib/client/updater.js"></script>
-
+    <link rel="stylesheet" href="index.css">
+    <script type="module" src="/lib/client/updater.js"></script>
     <script type="module" src="warmups.js"></script>
     <script type="module" src="index.js"></script>
   </head>
   <body>
     <h1>CS193X Assignment 1</h1>
-    <!-- Add inputs and buttons for part 3 here -->
     <form id="declaration-form">
       <label for="sunetid-input">SUNetID:</label>
       <input type="text" id="sunetid-input" name="sunetid">
